@@ -4,6 +4,7 @@ DIST efitools-1.4.2.tar.gz 97303 SHA256 df7b9d7570b2fb85ee060e14b1952233d28e277f
 EBUILD efitools-1.4.1-r1.ebuild 708 SHA256 f5006ac96ec9089c07c1273b665f9b7b0016e8cde1efa329d7d8d583cd7bdc5b SHA512 59a31c61d656df893030642d5b4dd2578d66abe19beca4a19dcd0e59f317483d2a2313770f5e438d070ff8234c8d38d7993d346984dc2b398a6317c49c8c1d26 WHIRLPOOL db8875b87546e752439b32d7d3b1195a4ef0ba7583638ed2d816a6c99fe197a47b6c75c34e60fb76e267e1fefff75fdb62e581811c1dd979585b04aa2c18e17a
 EBUILD efitools-1.4.1-r2.ebuild 811 SHA256 16b6dd6c1fa0159630995f3a4eaf3466c38053b2c41aac831b0b0e91ec03525e SHA512 9159ce0945b895f57116142eb6cb66e353e3a4f4eebab5a414a1228dabcb116c0db02fd75d6454de6ba8c0094ee6cbc471c592540e24238a22ef9661b34711fe WHIRLPOOL 6baffa3d0f2547345f957dcae153b77959e08cd85863b438a630371e01860ac6d328c34775b3e0ddde029790e3f004fee87cd024ecd20fd7d1d85fbb16383a0a
 EBUILD efitools-1.4.1.ebuild 661 SHA256 6a565700ad7a761ae086e18ac3296c3c3fdfb0e8fdc4834cf89b0c55de178faf SHA512 7460cb377b575ea3c2efe244695fe711aae36beb4a11c504a87e05044cd6b0bbef2ab2c354715668c35e6cc5fb5391fab5b77a671553481b8a10024f4d540373 WHIRLPOOL 4d9a351860795439530fa40fca3e2303fb7cd1638ab11f9a6782e1dd5f2c4e2e66305e05b2a062709c900a12725f6ea68c7f518cda12476d47c0af9ad2518c1d
+EBUILD efitools-1.4.2-r1.ebuild 682 SHA256 38b9d1d8d35a2bef63c034830b1f54db8bdd89cf1fd0879406cdf3979943d044 SHA512 534f38e511758ece618859937cd340a65dd8ec99ebeb40534965ded404fa3e6c376bc7ad45a8fd9594897ef0d060ec2ccf0d2f884862498eadb90e5cb8e1f344 WHIRLPOOL cb4c59921cf2a73197f8e809ac4811f8ca60206deabef35806e82440cebc53c4d357f580abe625a1e2c0cfcdb9c0c6416a4ae2870916c9a95d45d21fdf8dc148
 EBUILD efitools-1.4.2.ebuild 658 SHA256 dfe973cb20ef8cc4f1ad82eb6b6c5fcc75fec97c05e1aa56814993ffd3611f9d SHA512 7d3a7911d5e24ce1d46bb90b071186d364795eab3f4e7538ba02076db992a02d842e82a59f4d855d80c452cfa6d8da75688282119fcb9257802f704d656aec44 WHIRLPOOL 92f8b043f48fd8d3df7793367ca41b0069ea729337cd7a5f69a9b96d2be2f7e3117b7873212ee3655c1043de1fbb66008156601ecb9c9173703eeaae20194a2e
-MISC ChangeLog 1058 SHA256 3daeea8261bc32c779077be1f49f79c2b6100d0986f7f80d104fd51398b439e0 SHA512 acad5699a801fc3583d3faaafe5ecbb9b2887969b18296802ffae08f2172a0eace8c369c4ff8bee0989eaf4e390197fcae5bfc663fd00a9b053079f7f6b79a6b WHIRLPOOL 04d05d54bc1e23d42ae900b3a939dae47580746485f30bc8741f2bb3996d42f3727b679be539f65020901a9b07f72592ac10a994753a164d672df84cc7e95fde
+MISC ChangeLog 1232 SHA256 66fa1a585006255202e5ec736217588b8697fc178eb17b9de4d044609de0a5ec SHA512 8d3dd5272f62d39672c01972a41fd13afa2b08903feb61018519c0b57e5f5b99e08b87b329398758af0a5f38749709254b63866ff6224349ab68d974d80f6a88 WHIRLPOOL cc7e264e10e57453646c983b30f2feb1a2848e966d90fb997f4740caa0d5ae7d1eb9790d8cece020993f9133664f651eabaa01eecb8aec266ab76c5aff9c46ac
 MISC metadata.xml 240 SHA256 218f6016b45c0a0d55b04630266085c44107606f2b79024c15a9797b4b828bd5 SHA512 659a6ebd2024aefd2989e9c412b7bb10271a5d6b12f291dcc8dbdfb3568e8eddb8dfa674cf6befa80eb8036e222e434276d36ba5b164733cfc934e4e7a3ae101 WHIRLPOOL 252a9a3addb2a1ecf3b3734a5e65c097d3c6d032f18b05d33458298fbeb36b7cb6147830c85d4d80764e05653bc7a4bb48ec070662d28b148799cad42ecd05d0
