@@ -1,0 +1,23 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/efitools/efitools-1.4.2-r1.ebuild,v 1.1 2013/10/03 22:34:09 gregkh Exp $
+
+EAPI="4"
+
+DESCRIPTION="Tools for manipulating UEFI secure boot platforms"
+HOMEPAGE="git://git.kernel.org/pub/scm/linux/kernel/git/jejb/efitools.git"
+SRC_URI="http://blog.hansenpartnership.com/wp-uploads/2013/efitools-${PV}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+RDEPEND="dev-libs/openssl
+	sys-apps/util-linux"
+DEPEND="${RDEPEND}
+	sys-apps/help2man
+	sys-boot/gnu-efi
+	app-crypt/sbsigntool
+	virtual/pkgconfig
+	dev-perl/File-Slurp"
