@@ -1,0 +1,11 @@
+DEFINED_PHASES=-
+DEPEND=dev-libs/openssl sys-apps/util-linux sys-apps/help2man sys-boot/gnu-efi app-crypt/sbsigntool virtual/pkgconfig dev-perl/File-Slurp
+DESCRIPTION=Tools for manipulating UEFI secure boot platforms
+EAPI=4
+HOMEPAGE=git://git.kernel.org/pub/scm/linux/kernel/git/jejb/efitools.git
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-libs/openssl sys-apps/util-linux
+SLOT=0
+SRC_URI=http://blog.hansenpartnership.com/wp-uploads/2013/efitools-1.4.2.tar.gz
+_md5_=1de757a12573db9b81fdf3c72c171b43
